--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ant-design-vue": "^2.2.8",
+    "axios": "^0.26.0",
+    "pinia": "^2.0.11",
     "vue": "^3.2.25"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
+    "cross-env": "^7.0.3",
+    "mockjs": "^1.1.0",
     "typescript": "^4.5.4",
+    "unplugin-vue-components": "^0.17.21",
     "vite": "^2.8.0",
+    "vite-plugin-mock": "^2.9.6",
     "vue-tsc": "^0.29.8"
   }
 }
