--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue3tolist",
+  "name": "vue3-antD-admin",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -8,10 +8,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/nprogress": "^0.2.0",
     "ant-design-vue": "^2.2.8",
     "axios": "^0.26.0",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.11",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
